fixed LandingButton z-index

--- a/src/components/LandingButton/LandingButton.module.scss
+++ b/src/components/LandingButton/LandingButton.module.scss
@@ -10,6 +10,7 @@
   padding: 0.5rem;
   text-align: center;
   clip-path: polygon(7% 0, 100% 0%, 93% 100%, 0% 100%);
+  z-index: 5;
   position: relative;
 
   &::before {
